--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -70,6 +70,12 @@
   {% if entry.html %}
     [<a href="{{ entry.html }}" target="_blank">HTML</a>]
   {% endif %}
+  {% if entry.url %}
+    [<a href="{{ entry.url }}" target="_blank">HTML</a>]
+  {% endif %}
+  {% if entry.doi %}
+    [<a href="{{ entry.doi }}" target="_blank">DOI</a>]
+  {% endif %}
   {% if entry.pdf %}
     [<a href="{{ entry.pdf | prepend: '/assets/pdf/' | prepend: site.baseurl | prepend: site.url }}" target="_blank">PDF</a>]
   {% endif %}
