--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,6 +54,9 @@ $purple:            #B509AC !default;
 $pink:              #f92080 !default;
 $light-pink:        #ffdddd !default;
 $yellow:            #efcc00 !default;
+$uvsq-blue:         #0092bb !default;
+$uvsq-green:        #77ad1c !default;
+$uvsq-grey:         #6f6f6e !default;
 
 $white:             #fff !default;
 $dark-gray:         #333 !default;
@@ -70,7 +73,7 @@ $darken-2:          rgba(#000,.125) !default;
 $darken-3:          rgba(#000,.25) !default;
 $darken-4:          rgba(#000,.5) !default;
 
-$theme-color:       $purple;
+$theme-color:       $uvsq-blue;
 $code-color:        $dark-gray;
 $text-color:        $mid-gray;
 $background-color:  white;
