--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -11,7 +11,7 @@
 
 <div id="{{entry.key}}">
   {% if entry.type == "thesis" %}
-    {{reference}}
+    {{reference}} Poueta
   {% else %}
     <span class="title">{{entry.title}}</span>
     <span class="author">
@@ -50,9 +50,15 @@
 
     <span class="periodical">
     {% if entry.type == "article" %}
-      <em>{{entry.journal}}</em>
+      <em>{{entry.journal}}</em>, 
     {% elsif entry.type == "inproceedings" %}
-      <em>In {{entry.booktitle}}</em>
+      In <em>{{entry.booktitle}}</em>, 
+    {% elsif entry.type == "incollection" %}
+      In <em>{{entry.booktitle}}</em>, {{entry.publisher}}, 
+    {% elsif entry.type == "techreport" %}
+      In <em>arXiv</em>, 
+    {% else %}
+       {{entry.type}}, {{entry.address}}, 
     {% endif %}
     {% if entry.year %}
       {{entry.year}}
