correct link color in css

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,7 +74,7 @@ $darken-3:          rgba(#000,.25) !default;
 $darken-4:          rgba(#000,.5) !default;
 
 // $theme-color:       $uvsq-blue;
-$theme-color:       $blue-1;
+$theme-color:       $uvsq-blue;
 $code-color:        $dark-gray;
 $text-color:        $mid-gray;
 $background-color:  white;
