--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -11,7 +11,7 @@
 
 <div id="{{entry.key}}">
   {% if entry.type == "thesis" %}
-    {{reference}} Poueta
+    {{reference}}
   {% else %}
     <span class="title">{{entry.title}}</span>
     <span class="author">
@@ -80,7 +80,7 @@
     [<a href="{{ entry.url }}" target="_blank">HTML</a>]
   {% endif %}
   {% if entry.doi %}
-    [<a href="{{ entry.doi }}" target="_blank">DOI</a>]
+    [<a href="http://dx.doi.org/{{ entry.doi }}" target="_blank">DOI</a>]
   {% endif %}
   {% if entry.pdf %}
     [<a href="{{ entry.pdf | prepend: '/assets/pdf/' | prepend: site.baseurl | prepend: site.url }}" target="_blank">PDF</a>]
